Revision history for Perl application Wx::Demo.

0.16  TBR
    - Added wxWebView
    - Added wxTimePickerCtrl

0.15  Fri Mar 16 2012
    - Added wxTreeListCtrl
    - Added wxRibbonControl
    - Added wxPropertyGrid

0.14  Tue Feb 28 2012
    - Fix wxOverlay font on MSW + mingw + gdiplus
    - Add wxDF_UNICODETEXT handling in wxClipboard demo
    - several wxWidgets 2.9.3 compatibility fixes

0.13  Thu May 05 08:00:00 BST 2011
    - Wx::PlVlistBox example expanded
    - Add bitmap features of Wx::Button
    - Add Wx::GridTableBase - GetAttr

0.12  Wed Feb  2 13:30:00 CEST 2011    
    - don't use wxPerl on MacOSX if >= 0.98
    - Tests can pass if wxMediaCtrl is missing
    - Some Makefile.PL improvements (Gabor Szabo)
    - Added demo for wxHeaderCtrl and wxHeaderCtrlSimple.
    - Added demo for wxOverlay.

0.11  Fri Apr  2 18:34:04 CEST 2010
    - Allow searching inside the source code (Gabor Szabo).
    - Add another tab with the list of all wxPerl classes/events
      used in the demo (Gabor Szabo).
    - Added demo for wxSpinCtrlDouble.

0.10  Sun Jun 29 21:51:39 CEST 2008
    - Fixed wxListCtrl report mode demo latent bug.
    - Fixed running under Perl 5.10.

0.09  Sun Aug 26 01:10:56 CEST 2007
    - Added demo for wxHyperlinkCtrl.
    - Added demo for wxTipDialog.
    - Added demo for wxPasswordEntryDialog.

0.08  Thu Aug 23 21:56:10 CEST 2007
    - Added "New" category for demos new since last version.
    - Added demo for wxVScrolledWindow and wxHVScrolledWindow.
    - Added demo for wxComboCtrl.
    - Added demo for wxAboutDialog.
    - Added demo for wxCollapsiblePane.
    - Added demo for wxSearchControl.

0.07  Wed Mar 28 22:57:39 CEST 2007
    - Added demo for some of the wxWidgets help classes.

0.06  Thu Mar 22 00:08:44 CET 2007
    - Added demo for wxToolBar (moved the code from the wxPerl one).
    - Added demo for wxCaret (moved the code from the wxPerl one).
    - Added demo for wxArtProvider (moved the code from the wxPerl one).