@@ -3,6 +3,8 @@ Revision history for Perl application Wx::Demo.
 0.16  TBR
     - Added wxWebView
     - Added wxTimePickerCtrl
+    - Added wxRichToolTip
+    - Added wxBannerWindow
 
 0.15  Fri Mar 16 2012
     - Added wxTreeListCtrl
